--- a/index.html
+++ b/index.html
@@ -12,31 +12,37 @@
 </head>
 
 <body>
-   <header>
-      <img src="images/logo.svg" alt="base apparel logo">
-   </header>
-   <main class="flex--display">
-      <section class="hero--section">
-         <div class="hero__img">
-            <img src="images/hero-mobile.jpg" alt="woman who takes a natural pose">
-         </div>
-      </section>
-      <section class="content--section">
-         <div class="content__container">
-            <div class="container__text">
-               <h1>We're<br><span class="text--colored">Coming soon</span></span></h1>
+   <div class="grid-parent">
+      <header class="container">
+         <img src="images/logo.svg" alt="base apparel logo">
+      </header>
+      <section class="content--section container">
+         <div class="content">
+            <div class="content__text">
+               <h1>We're<br><span class="title--colored">Coming soon</span></span></h1>
                <p>Hello fellow shoppers! We're currently building our new fashion store. Add your email below to stay
                   ip-to-date with announcements and our launch deals.</p>
             </div>
-            <form action="/index.html" method="GET">
+            <form action="" method="GET">
                <input type="email" name="email" id="email" class="email--input" placeholder="Email Address" required>
+               <span class="icon--error">
+                  <img src="images/icon-error.svg" alt="error icon">
+               </span>
+               <span class="message--error"></span>
                <button type="submit" class="button--submit">
                   <img src="images/icon-arrow.svg" alt="arrow icon in the input button">
                </button>
             </form>
          </div>
       </section>
-   </main>
+      <aside class="hero--section">
+         <div class="hero__img">
+            <!-- <img src="images/hero-mobile.jpg" alt="woman who takes a natural pose"> -->
+         </div>
+      </aside>
+   </div>
+
+   <script src="assets/js/app.js"></script>
 </body>
 
 </html>
